# bioinfo

./: .gitignore  LICENSE  db.sqlite3  do_statistics.py  make_statistics_table.py  manage.py  perform_statistics.py  pyproject.toml
big/: admin.py  models.py  urls.py  views.py
big/migrations/: 0001_initial.py  0002_auto_20180510_0920.py  0002_publication_doi.py  0003_auto_20180513_0247.py  0003_publication_abstract.py  0004_publication_year.py  0004_slideshow.py
bighome/: LICENSE  README.md  admin.py  models.py  urls.py  views.py
bioinfo/: asgi.py  database_router.py  jinja2.py  settings.py  urls.py  wsgi.py
dulab/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dulab/migrations/: 0001_initial.py  0002_remove_option_name_option_slug_alter_post_slug_and_more.py  0003_alter_slideshow_slide.py  0004_member_email.py  0005_remove_member_email_remove_member_profile_and_more.py  0006_alter_member_bio_en_alter_member_bio_zh_and_more.py  0007_alter_member_grade_alter_post_banner_and_more.py  0007_member_number_software_title_en_software_title_zh_and_more.py  0008_alter_post_content_en_alter_post_content_zh.py  0008_alter_software_citation_photo.py  0009_alter_download_options_download_visitor_and_more.py  0009_alter_post_content_en_alter_post_content_zh.py  0010_alter_post_content_en_alter_post_content_zh_photo.py  (+6 more)
macaca/: __views.py  models.py  urls.py  views.py
scripts/: load_data_into_database.py  make_annotation_table.py  make_disease_table.py  make_drug_table.py  make_function_table.py  make_snp_table.py  split_snp_table.py  split_table_by_chr.py
(+85 files in other folders)
