[project]
name = "bioinfo"
version = "0.2.0"
description = "Website for Bioinformatics and Integrative Genomics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.5",
    "django-crispy-forms>=2.6",
    "django-unfold>=0.93.0",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "sqlparse>=0.5.5",
	"mysqlclient>=2.2.8",
	"gunicorn>=26.0.0",
]
